--- a/Modules/admin/locale/fr_FR/LC_MESSAGES/messages.po
+++ b/Modules/admin/locale/fr_FR/LC_MESSAGES/messages.po
@@ -2,9 +2,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: emoncms3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-01-17 17:48+0100\n"
-"PO-Revision-Date: 2014-01-17 17:50+0100\n"
-"Last-Translator: VIALAT Mickael <contact@planete-domotique.com>\n"
+"POT-Creation-Date: 2014-04-15 20:28+0100\n"
+"PO-Revision-Date: 2014-04-15 20:29+0100\n"
+"Last-Translator: Benoît Pique <benoit.pique@gmail.com>\n"
 "Language-Team: Baptiste Gaultier (Télécom Bretagne) <baptiste."
 "gaultier@telecom-bretagne.eu>\n"
 "Language: fr_FR\n"
@@ -17,23 +17,40 @@ msgstr ""
 "X-Generator: Poedit 1.5.4\n"
 "X-Poedit-SearchPath-0: ../../..\n"
 
-#: ../../../update_view.php:29 ../../../admin_main_view.php:17
+#: ../../../update_view.php:29 ../../../admin_main_view.php:35
+#: ../../../admin_main_view (copie).php:30
 msgid "Update database"
 msgstr "Mise à jour de la base de données"
+
+#: ../../../update_view.php:36
+msgid "Todo"
+msgstr "A faire!"
+
+#: ../../../update_view.php:36
+msgid "these changes need to be applied"
+msgstr "Ces changements doivent être appliqués"
 
 #: ../../../update_view.php:37
 msgid "Apply changes"
 msgstr "Appliquer les modifications"
 
-#: ../../../update_view.php:44
+#: ../../../update_view.php:42
+msgid "Success"
+msgstr "Ok"
+
+#: ../../../update_view.php:43
+msgid "the following changes have been applied"
+msgstr "Le changements ont été enregistrés"
+
+#: ../../../update_view.php:46
 msgid "Check for further updates"
 msgstr "Tester les mises à jour"
 
-#: ../../../update_view.php:51
+#: ../../../update_view.php:50
 msgid "Database is up to date "
 msgstr "La base de données est à jour"
 
-#: ../../../update_view.php:51
+#: ../../../update_view.php:50
 msgid "Nothing to do"
 msgstr "Aucune mise à jour nécessaire"
 
@@ -74,15 +91,194 @@ msgstr "Nom"
 msgid "Status"
 msgstr "Satus"
 
-#: ../../../admin_main_view.php:7 ../../../admin_main_view.php:12
+#: ../../../admin_controller.php:25
+msgid "not authoraized"
+msgstr "Accès non autorisé"
+
+#: ../../../admin_controller.php:101
+msgid "No orgfields provided"
+msgstr "Pas de champs fournis"
+
+#: ../../../admin_controller.php:115
+msgid "No id provided"
+msgstr "Pas de clé d'enregistrement unique fournie"
+
+#: ../../../admin_controller.php:127
+#, fuzzy
+msgid "Update no done"
+msgstr "Mise à jour & Analyse"
+
+#: ../../../admin_controller.php:132
+msgid "Unknown command!"
+msgstr "Commande inconnue!"
+
+#: ../../../orglist_view.php:13 ../../../admin_main_view.php:12
+#: ../../../admin_main_view.php:15 ../../../admin_main_view (copie).php:10
+#: (copie).php:15
+msgid "Organisations"
+msgstr "Organisations"
+
+#: ../../../orglist_view.php:16 ../../../orglist_view.php:33
+msgid "Add new organisation"
+msgstr "Ajouter une organisation"
+
+#: ../../../orglist_view.php:29
+msgid ""
+"There is no organisation yet defined in your system, create at least one.  "
+msgstr "Il n'y a aucune organisation définie"
+
+#: ../../../orglist_view.php:30
+msgid ""
+"You will be afterward able to create many users (at least one) linked to "
+"this organisation. "
+msgstr ""
+"Vous serez ainsi capable de créer un utilisateur (ou plusieurs) appartenant "
+"à cette organisation."
+
+#: ../../../orglist_view.php:31
+msgid "Click the  "
+msgstr "Cliquer"
+
+#: ../../../orglist_view.php:35
+msgid " icon here or above to create the first one."
+msgstr "l'icone ci-dessus pour créer la première."
+
+#: ../../../orglist_view.php:46
+msgid "New organisation creation"
+msgstr "Ajouter une organisation."
+
+#: ../../../orglist_view.php:51
+msgid "Short name"
+msgstr "Nom court"
+
+#: ../../../orglist_view.php:53
+msgid "The short name must be unique"
+msgstr "Le nom court doit être unique"
+
+#: ../../../orglist_view.php:56
+msgid "Organisation name"
+msgstr "Nom de l'organisation"
+
+#: ../../../orglist_view.php:58
+msgid "New organisation long name"
+msgstr "Nom complet de la nouvelle organisation"
+
+#: ../../../orglist_view.php:61
+msgid ""
+"These are the main organisation data, all the remaininng parameters are "
+"updatable later"
+msgstr ""
+"Ceci représente les données minimales de création d'une organisation.  Les "
+"autre données pourront être mises à jour plus tard."
+
+#: ../../../orglist_view.php:66
+msgid "Create"
+msgstr "Création"
+
+#: ../../../orglist_view.php:67 ../../../orglist_view.php:86
+msgid "Cancel"
+msgstr "Annuler"
+
+#: ../../../orglist_view.php:77
+msgid "Confirm organisation deletion"
+msgstr "Confirmation de supression d'une organisation"
+
+#: ../../../orglist_view.php:81
+msgid ""
+"Are you sure you want to delete this organisation, the oparation is non "
+"reversible!"
+msgstr ""
+"Etes vous sûr de vouloir supprimer cette organisation?  L'opération est non "
+"réversible."
+
+#: ../../../orglist_view.php:85
+msgid "Confirm delete"
+msgstr "CJe confirme"
+
+#: ../../../orglist_view.php:145
+msgid "Suppress organisation"
+msgstr "Supression de l'organisation"
+
+#: ../../../orglist_view.php:146
+msgid "Edit organisation attributes"
+msgstr "Modifier les détail de l'organisation"
+
+#: ../../../orglist_view.php:146
+msgid "Save"
+msgstr "Sauvegarder"
+
+#: ../../../orglist_view.php:148 ../../../userlist_view.php:36
+msgid "Id"
+msgstr "Clé"
+
+#: ../../../orglist_view.php:148
+msgid "Manage organisation details"
+msgstr "Administrer les détails"
+
+#: ../../../orglist_view.php:149
+msgid "short Name"
+msgstr "Nom court"
+
+#: ../../../orglist_view.php:149
+msgid "Should be unique"
+msgstr "Doit être unique"
+
+#: ../../../orglist_view.php:150
+msgid "Country"
+msgstr "Pays"
+
+#: ../../../orglist_view.php:151
+msgid "Time zone"
+msgstr "Fuseau horaire"
+
+#: ../../../orglist_view.php:151
+msgid "Default time zone for organisation users"
+msgstr "Le fuseau horaire par défaut pour les nouveaux utilisateurs"
+
+#: ../../../orglist_view.php:152
+msgid "Company Name"
+msgstr "Nom de société"
+
+#: ../../../orglist_view.php:152
+msgid "Organisation long name"
+msgstr "Nom complet"
+
+#: ../../../orglist_view.php:153 ../../../orglist_view.php:154
+#: ../../../userlist_view.php:39
+msgid "Language"
+msgstr "Langue"
+
+#: ../../../orglist_view.php:153 ../../../orglist_view.php:154
+msgid "Default language for organisation users"
+msgstr "Langue par défaut des nouveaux utilisateurs"
+
+#: ../../../orglist_view.php:155
+msgid "Last use"
+msgstr "Dernière utilisation"
+
+#: ../../../admin_main_view.php:2
+msgid "Administration panel"
+msgstr "Vue d'administration de l'application"
+
+#: ../../../admin_main_view.php:16 ../../../admin_main_view (copie).php:11
+msgid "Administer organisations"
+msgstr "Administrer les organisations"
+
+#: ../../../admin_main_view.php:22 ../../../admin_main_view.php:25
+#: ../../../admin_main_view (copie).php:20 (copie).php:25
+#: ../../../userlist_view.php:12
 msgid "Users"
 msgstr "Utilisateurs"
 
-#: ../../../admin_main_view.php:8
+#: ../../../admin_main_view.php:26 ../../../admin_main_view (copie).php:21
 msgid "Administer user accounts"
 msgstr "Administrer les comptes d'utilisateurs"
 
-#: ../../../admin_main_view.php:18
+#: ../../../admin_main_view.php:32 ../../../admin_main_view (copie).php:35
+msgid "Update & check"
+msgstr "Mise à jour & Analyse"
+
+#: ../../../admin_main_view.php:36 ../../../admin_main_view (copie).php:31
 msgid ""
 "Run this after updating emoncms, after installing a new module or to check "
 "emoncms database status."
@@ -90,14 +286,10 @@ msgstr ""
 "Lancez cette commande après une mise à jour de Emoncms, après l'installation "
 "d'un nouveau module ou pour tester l'intégrité de la base de données"
 
-#: ../../../admin_main_view.php:22
-msgid "Update & check"
-msgstr "Mise à jour & Analyse"
-
-#: ../../../userlist_view.php:36
-msgid "Id"
-msgstr ""
-
 #: ../../../userlist_view.php:38
 msgid "Tag"
 msgstr "Étiquette"
+
+#: ../../../userlist_view.php:40
+msgid "Last login"
+msgstr "Dernière utilisation"
